--- a/assets/index.html
+++ b/assets/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Cadastro</title>
-    <link rel="stylesheet" href="assests/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="form-img">
-            <img src="img/undraw_shopping-app_b80f.svg" alt="imagem de compras">
+            <img src="img/undraw_shopping_a55o.svg" alt="imagem de compras">
         </div>
         <div class="form">
             <form action="#">
@@ -49,8 +49,28 @@
                 </div>
                 <div class="gender-inputs">
                     <div class="gender-title">
-
+                        <h6>Gêneros</h6>
                     </div>
+                    <div class="gender-group">
+                        <input type="radio" name="gender" id="imale">
+                        <label for="imale">Masculino</label>
+                    </div>
+                    <div class="gender-group">
+                        <input type="radio" name="gender" id="ifamele">
+                        <label for="ifamele">Feminino</label>
+                    </div>
+                    <div class="gender-group">
+                        <input type="radio" name="gender" id="ioutros">
+                        <label for="ioutros">Outros</label>
+                    </div>
+                    <div class="gender-group">
+                        <input type="radio" name="gender" id="inone">
+                        <label for="inone">Prefiro não dizer</label>
+                    </div>
+                </div>
+
+                <div class="continue-button">
+                    <button><a href="#">Continuar</a></button>
                 </div>
             </form>
         </div>
